Fix mobile overflow

--- a/css/input.scss
+++ b/css/input.scss
@@ -52,6 +52,7 @@ article {
 @media(max-width: 800px) {
 	article {
 		overflow: auto;
+		overflow-x: hidden;
 		height: inherit;
 	}
 	.parallax {
